# dconvexhull

./: .gitignore  MANIFEST.in  README.md  setup.cfg
src/dconvexhull/: __init__.py
src/dconvexhull/operations/: __inti__.py  convxHull.py  graphConv.py
test/: data.csv  test_operations.py
