[metadata]
name = dconvexhull
version = 0.1.1
author = Deniz DAHMAN
author_email = infodahmansphi@gmail.com
description = A convex hull operations package with visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dahmansphi/dconvexhull
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib

[options.packages.find]
where = src